# pic2_robot

./: .gitignore  README.md  README2.md  engrenagens-38-39-40_impressao.stl  suporteAS5600_Impressao.stl
arduino/: arduino.ino
pic2/install/: local_setup.sh  setup.sh
pic2/install/converter_pkg/lib/converter_pkg/: nav2_cmd_to_arduino
pic2/install/converter_pkg/share/converter_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pic2/install/diffdrive_arduino/include/diffdrive_arduino/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
pic2/install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
pic2/install/diffdrive_arduino/share/diffdrive_arduino/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  diffdrive_arduinoConfig-version.cmake  diffdrive_arduinoConfig.cmake  export_diffdrive_arduinoExport.cmake
pic2/install/diffdrive_arduino/share/diffdrive_arduino/config/: diffbot_controllers.yaml  (+3 more)
pic2/install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
pic2/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
pic2/log/: latest_build
slam_toolbox/cmake/: rosidl_cmake_aggregate_target-extras.cmake  slam_toolboxConfig.cmake
slam_toolbox/config/: mapper_params_online_async.yaml
slam_toolbox/rust/: Cargo.toml
(+53 files in other folders)
