[package]
name = "slam_toolbox"
version = "2.8.5"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
sensor_msgs = "*"
std_msgs = "*"
builtin_interfaces = "*"
nav_msgs = "*"
service_msgs = "*"
geometry_msgs = "*"
visualization_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'sensor_msgs/serde', 'std_msgs/serde', 'builtin_interfaces/serde', 'nav_msgs/serde', 'service_msgs/serde', 'geometry_msgs/serde', 'visualization_msgs/serde']

[package.metadata.ros-env]
include = true
